[package]
name = "hccr"
version = "0.1.0"
authors = ["HALKA9000-NIIP <csta19097@g.nihon-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
derive_more = "0.99.9"
structopt = { version = "0.3", default-features = false }
